(executable
 (public_name ai-chat)
 (modules ai_chat)
 (name ai_chat)
 (libraries openai lwt lwt.unix lambda-term)
 (flags -g)
 (preprocess
  (pps
   ppx_deriving.show
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_deriving.std
   ez_api.ppx
   lwt_ppx)))

(executable
 (public_name steve-buscemi)
 (modules steve_buscemi)
 (name steve_buscemi)
 (libraries openai lwt lwt.unix lambda-term)
 (flags -g)
 (preprocess
  (pps
   ppx_deriving.show
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_deriving.std
   ez_api.ppx
   lwt_ppx)))
